--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Simple Layout</title>
   </head>
@@ -29,9 +32,7 @@
     </header>
     <main>
       <div class="main-container">
-
         <aside class="sidebar">
-
           <section class="side-section">
             <h2>Subscriptions:</h2>
             <ul>
@@ -40,7 +41,7 @@
               <li><a href="#">Casts</a></li>
             </ul>
           </section>
-          
+
           <section class="side-section">
             <h2>Friends:</h2>
             <ul>
@@ -50,24 +51,19 @@
             </ul>
           </section>
 
-         
+          <section class="side-section">
+            <h2>Others:</h2>
+            <ul>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Music</a></li>
+              <li><a href="#">Games</a></li>
+            </ul>
+          </section>
         </aside>
 
         <div class="main">
-          <div class="card">
-            <div class="video">
-              <img src="./assets/play.png" alt="video" />
-            </div>
-            <div class="video-name">
-              <h2>NAME OF THE VIDEO</h2>
-            </div>
-            <div class="card">
-              <div class="video">
-                <img src="./assets/play.png" alt="video" />
-              </div>
-              <div class="video-name">
-                <h2>NAME OF THE VIDEO</h2>
-              </div>
+          <div class="card-container">
+            <a href="#">
               <div class="card">
                 <div class="video">
                   <img src="./assets/play.png" alt="video" />
@@ -75,10 +71,103 @@
                 <div class="video-name">
                   <h2>NAME OF THE VIDEO</h2>
                 </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="card-container">
+            <a href="#">
+              <div class="card">
+                <div class="video">
+                  <img src="./assets/play.png" alt="video" />
+                </div>
+                <div class="video-name">
+                  <h2>NAME OF THE VIDEO</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="card-container">
+            <a href="#">
+              <div class="card">
+                <div class="video">
+                  <img src="./assets/play.png" alt="video" />
+                </div>
+                <div class="video-name">
+                  <h2>NAME OF THE VIDEO</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="card-container">
+            <a href="#">
+              <div class="card">
+                <div class="video">
+                  <img src="./assets/play.png" alt="video" />
+                </div>
+                <div class="video-name">
+                  <h2>NAME OF THE VIDEO</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="card-container">
+            <a href="#">
+              <div class="card">
+                <div class="video">
+                  <img src="./assets/play.png" alt="video" />
+                </div>
+                <div class="video-name">
+                  <h2>NAME OF THE VIDEO</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="card-container">
+            <a href="#">
+              <div class="card">
+                <div class="video">
+                  <img src="./assets/play.png" alt="video" />
+                </div>
+                <div class="video-name">
+                  <h2>NAME OF THE VIDEO</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="card-container">
+            <a href="#">
+              <div class="card">
+                <div class="video">
+                  <img src="./assets/play.png" alt="video" />
+                </div>
+                <div class="video-name">
+                  <h2>NAME OF THE VIDEO</h2>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="card-container">
+            <a href="#">
+              <div class="card">
+                <div class="video">
+                  <img src="./assets/play.png" alt="video" />
+                </div>
+                <div class="video-name">
+                  <h2>NAME OF THE VIDEO</h2>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
       </div>
     </main>
-    <footer>2024 &copy; MikuTube</footer>
+    <footer>2009 &copy; MikuTube</footer>
   </body>
 </html>
