--- a/index.html
+++ b/index.html
@@ -15,18 +15,21 @@
   <body>
     <header>
       <div class="header-container">
-        <div class="logo">
-          <a href="#"><img src="./assets/logo.png" alt="LOGO" /></a>
-        </div>
-        <div class="list">
-          <ul>
-            <li><a href="#">FOR YOU</a></li>
-            <li><a href="#">RECOMENDATIONS</a></li>
-            <li><a href="#">FRIENDS</a></li>
-          </ul>
-        </div>
-        <div class="icon">
-          <a href="#"><img src="./assets/miku.jpg" alt="User" /></a>
+        <div class="header-burger">BURGER</div>
+        <div class="header">
+          <div class="logo">
+            <a href="#"><img src="./assets/logo.png" alt="LOGO" /></a>
+          </div>
+          <div class="list">
+            <ul>
+              <li><a href="#">FOR YOU</a></li>
+              <li><a href="#">RECOMENDATIONS</a></li>
+              <li><a href="#">FRIENDS</a></li>
+            </ul>
+          </div>
+          <div class="icon">
+            <a href="#"><img src="./assets/miku.jpg" alt="User" /></a>
+          </div>
         </div>
       </div>
     </header>
@@ -34,29 +37,29 @@
       <div class="main-container">
         <aside class="sidebar">
           <section class="side-section">
-            <h2>Subscriptions:</h2>
+            <h2><a href="#">Subscriptions:</a></h2>
             <ul>
-              <li><a href="#">MikuOfficial</a></li>
-              <li><a href="#">Vocaloids</a></li>
-              <li><a href="#">Casts</a></li>
+              <li><a href="#">MikuOfficial</a> <strong>(25)</strong></li>
+              <li><a href="#">Vocaloids</a> <strong>(125)</strong></li>
+              <li><a href="#">Casts</a> <strong>(13)</strong></li>
             </ul>
           </section>
 
           <section class="side-section">
-            <h2>Friends:</h2>
+            <h2><a href="#">Friends:</a></h2>
             <ul>
-              <li><a href="#">MikuChan4324332</a></li>
-              <li><a href="#">mikuFan9000</a></li>
-              <li><a href="#">IloveMiku</a></li>
+              <li><a href="#">MikuChan332</a> <strong>(8)</strong></li>
+              <li><a href="#">mikuFan9000</a> <strong>(11)</strong></li>
+              <li><a href="#">IloveMiku</a> <strong>(19)</strong></li>
             </ul>
           </section>
 
           <section class="side-section">
-            <h2>Others:</h2>
+            <h2><a href="#">Others:</a></h2>
             <ul>
-              <li><a href="#">Events</a></li>
-              <li><a href="#">Music</a></li>
-              <li><a href="#">Games</a></li>
+              <li><a href="#">Events</a> <strong>(new)</strong></li>
+              <li><a href="#">Music</a> <strong>(new)</strong></li>
+              <li><a href="#">Games</a> <strong>(new)</strong></li>
             </ul>
           </section>
         </aside>
