--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
       <div class="main-container">
         <aside class="sidebar">
           <section class="side-section">
-            <h2><a href="#">Subscriptions:</a></h2>
+            <h2 class="side-section-heading">
+              <a href="#">Subscriptions...</a>
+            </h2>
+            <h2 class="main-heading"><a href="#">Subscriptions:</a></h2>
             <ul>
               <li><a href="#">MikuOfficial</a> <strong>(25)</strong></li>
               <li><a href="#">Vocaloids</a> <strong>(125)</strong></li>
@@ -46,7 +49,10 @@
           </section>
 
           <section class="side-section">
-            <h2><a href="#">Friends:</a></h2>
+            <h2 class="side-section-heading">
+              <a href="#">Friends...</a>
+            </h2>
+            <h2 class="main-heading"><a href="#">Friends:</a></h2>
             <ul>
               <li><a href="#">MikuChan332</a> <strong>(8)</strong></li>
               <li><a href="#">mikuFan9000</a> <strong>(11)</strong></li>
@@ -55,7 +61,10 @@
           </section>
 
           <section class="side-section">
-            <h2><a href="#">Others:</a></h2>
+            <h2 class="side-section-heading">
+              <a href="#">Others...</a>
+            </h2>
+            <h2 class="main-heading"><a href="#">Others:</a></h2>
             <ul>
               <li><a href="#">Events</a> <strong>(new)</strong></li>
               <li><a href="#">Music</a> <strong>(new)</strong></li>
