--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <aside class="sidebar">
           <section class="side-section">
             <h2 class="side-section-heading">
-              <a href="#">Subscriptions...</a>
+              <a href="#">Subscriptions</a>
             </h2>
             <h2 class="main-heading"><a href="#">Subscriptions:</a></h2>
             <ul>
@@ -50,7 +50,7 @@
 
           <section class="side-section">
             <h2 class="side-section-heading">
-              <a href="#">Friends...</a>
+              <a href="#">Friends</a>
             </h2>
             <h2 class="main-heading"><a href="#">Friends:</a></h2>
             <ul>
@@ -62,7 +62,7 @@
 
           <section class="side-section">
             <h2 class="side-section-heading">
-              <a href="#">Others...</a>
+              <a href="#">Others</a>
             </h2>
             <h2 class="main-heading"><a href="#">Others:</a></h2>
             <ul>
