--- a/recomendations.html
+++ b/recomendations.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Simple Layout</title>
+    <title>Recomendation</title>
   </head>
   <body>
     <header>
@@ -22,8 +22,8 @@
           </div>
           <nav class="list">
             <ul>
-              <li><a href="#" class="active-li">FOR YOU</a></li>
-              <li><a href="/recomendations.html">RECOMENDATIONS</a></li>
+              <li><a href="/index.html">FOR YOU</a></li>
+              <li><a href="#" class="active-li">RECOMENDATIONS</a></li>
               <li><a href="/friends.html">FRIENDS</a></li>
             </ul>
           </nav>
@@ -35,7 +35,7 @@
     </header>
     <main>
       <div class="main-container">
-        <aside class="sidebar">
+        <!-- <aside class="sidebar">
           <section class="side-section">
             <h2 class="side-section-heading">
               <a href="#">Subscriptions</a>
@@ -71,7 +71,7 @@
               <li><a href="#">Games</a> <strong>(new)</strong></li>
             </ul>
           </section>
-        </aside>
+        </aside> -->
 
         <div class="main">
           <div class="card">
