--- a/friends.html
+++ b/friends.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Simple Layout</title>
+    <title>Friends</title>
   </head>
   <body>
     <header>
@@ -22,9 +22,9 @@
           </div>
           <nav class="list">
             <ul>
-              <li><a href="#" class="active-li">FOR YOU</a></li>
+              <li><a href="/index.html">FOR YOU</a></li>
               <li><a href="/recomendations.html">RECOMENDATIONS</a></li>
-              <li><a href="/friends.html">FRIENDS</a></li>
+              <li><a href="#" class="active-li">FRIENDS</a></li>
             </ul>
           </nav>
           <div class="icon">
@@ -73,7 +73,7 @@
           </section>
         </aside>
 
-        <div class="main">
+        <!-- <div class="main">
           <div class="card">
             <a href="#">
               <div class="video">
@@ -139,7 +139,7 @@
               </div>
             </a>
           </div>
-        </div>
+        </div> -->
       </div>
     </main>
     <footer>2009 &copy; MikuTube</footer>
