--- a/recomendations.html
+++ b/recomendations.html
@@ -9,8 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/layer.css" />
-    <link rel="stylesheet" href="/styles/recomendations.css" />
+    <link rel="stylesheet" href="https://endyplus.github.io/styles/layer.css" />
+    <link
+      rel="stylesheet"
+      href="https://endyplus.github.io/styles/recomendations.css"
+    />
     <title>Recomendation</title>
   </head>
   <body>
