--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="
+    https://endyplus.github.io/styles/style.css"
+    />
     <title>Simple Layout</title>
   </head>
   <body>
