--- a/friends.html
+++ b/friends.html
@@ -10,8 +10,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/layer.css" />
-    <link rel="stylesheet" href="/styles/home.css" />
-    <title>Simple Layout</title>
+    <link rel="stylesheet" href="/styles/friends.css" />
+    <title>Friends</title>
   </head>
   <body>
     <header>
@@ -23,9 +23,9 @@
           </div>
           <nav class="list">
             <ul>
-              <li><a href="#" class="active-li">FOR YOU</a></li>
+              <li><a href="/index.html">FOR YOU</a></li>
               <li><a href="/recomendations.html">RECOMENDATIONS</a></li>
-              <li><a href="/friends.html">FRIENDS</a></li>
+              <li><a href="#" class="active-li">FRIENDS</a></li>
             </ul>
           </nav>
           <div class="icon">
@@ -74,7 +74,7 @@
           </section>
         </aside>
 
-        <div class="main">
+        <!-- <div class="main">
           <div class="card">
             <a href="#">
               <div class="video">
@@ -140,7 +140,7 @@
               </div>
             </a>
           </div>
-        </div>
+        </div> -->
       </div>
     </main>
     <footer>2009 &copy; MikuTube</footer>
