fix burger + improved

--- a/friends.html
+++ b/friends.html
@@ -160,5 +160,6 @@
       </div>
     </main>
     <footer>2009 &copy; MikuTube</footer>
+    <script src="/burger.js"></script>
   </body>
 </html>
