--- a/recomendations.html
+++ b/recomendations.html
@@ -164,5 +164,6 @@
       </div>
     </main>
     <footer>2009 &copy; MikuTube</footer>
+    <script src="/burger.js"></script>
   </body>
 </html>
