animated burger menu

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     <header>
       <div class="header-container">
         <div class="header-burger">
-          <img
-            src="/assets/hamburger_icon.png"
-            alt="BURGER"
-            id="burgerBtn"
-            onclick="burger()"
-          />
+          <div id="burgerBtn" class="burger-menu" onclick="burger()">
+            <div class="bur-menu top-bar"></div>
+            <div class="bur-menu mid-bar"></div>
+            <div class="bur-menu bottom-bar"></div>
+          </div>
         </div>
         <nav class="burger-list">
           <ul>
